--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ colorama==0.4.6
 commonmark==0.9.1
 dictdiffer==0.9.0
 distlib==0.3.7
-dnspython==2.4.1
+dnspython
 filelock==3.12.2
 Flask==2.3.2
 Flask-Cors==4.0.0
