--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ notion==0.0.28
 platformdirs==3.9.1
 pymango==0.1.1
 pymongo==4.4.1
-python-dotenv==1.0.0
+python-dotenv
 python-slugify==8.0.1
 requests==2.31.0
 soupsieve==2.4.1
